# pelapis.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  echarts.js  g2.js  index-old.html  index.html  index.js  index.rs  input.css  style.css  tailwind.config.js
anti-fraud/: login.html
archived/: plotter.js
assets/: main.css
assets/snake/: pico.classless.min-7c8c42ac196cfcf0.css  snake-f0a4200ed85d9aaa.js  snake-f0a4200ed85d9aaa_bg.wasm
bootstrap/: bootstrap.html
dioxus-tailwind-page/: Cargo.toml  Dioxus.toml
docs/: dioxus-test.wasm  index.html  personal-page-2809aa71f192ac38.js  personal-page-49edb85aabe7e430.js  personal-page-81b3ef287735be1f_bg.wasm  personal-page-b44ad21b2982cdb1.js  personal-page-b44ad21b2982cdb1_bg.wasm  personal-page-bcd188a58e3bd57c.js  personal-page-bcd188a58e3bd57c_bg.wasm  personal-page-c9f5979668805995_bg.wasm  style.css  style.css.br
docs/assets/: style-1b0bbf3cfc51530e.css  style-6ea793176f2c9a4.css  style.css
docs/assets/dioxus/: dioxus-test.js  dioxus-test.js.br  dioxus-test_bg.wasm  dioxus-test_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-ec619651cd4d8de4/: inline0.js  inline0.js.br
docs/data/: data_index.csv.br  data_maotai.csv.br  data_mengjie.csv.br
docs/wasm/: dioxus-test.js  dioxus-test.js.br  dioxus-test_bg.wasm  dioxus-test_bg.wasm.br
docs/wasm/snippets/dioxus-interpreter-js-4f37c5a4b5d73981/: inline0.js  inline0.js.br
docs/wasm/snippets/dioxus-interpreter-js-4f3bdb922bc47527/: inline0.js  inline0.js.br
html/: test.html
old/: index.js
pkg/: rust.d.ts  rust.js  rust_bg.wasm  rust_bg.wasm.d.ts
plot/: plot-boot.html  plot-bulma.html  plot-foundation.html  plot-native.html  plot.js  style.css
snake/: index.html  leptos_test-2918aa68eb0cb1c2.js  leptos_test-2918aa68eb0cb1c2_bg.wasm  snake-dc678b6ac4eb421d.js  snake-dc678b6ac4eb421d_bg.wasm  style-a452353467e5071a.css  style-c260a61a79a4e2ed.css  style-dd556cd5d6ddb935.css
src/: main.rs  snake copy.rs  snake.rs
wasm/: rust.wasm
