[package]
name = "personal-page"
version = "0.1.0"
edition = "2021"

[dependencies]
charming = { git = "https://github.com/yuankunzhang/charming.git", features = [
    "wasm",
] }
gloo = "0.11.0"
js-sys = "0.3.72"
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
rand = "0.8.5"
serde = "1.0.213"
web-sys = { version = "0.3.72", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlElement",
] }
