[package]
name = "dioxus-test"
version = "0.1.0"
authors = ["Flightless <pelapi@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.0-alpha.3", features = ["web", "router", "html"] }

charming = { git = "https://github.com/yuankunzhang/charming.git", features = [
    "wasm",
] }
gloo = "0.11.0"
rand = "0.8.5"
serde = "1.0.213"
tokio = { version = "1.41.0", features = ["time"] }
web-sys = { version = "0.3.72", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlElement",
    "TouchEvent",
    "TouchList",
    "Touch",
] }
